[gd_scene load_steps=4 format=2]

[ext_resource path="res://FlexibleDestructibleSprite/blocks/PhysicsBlockDestructible.gd" type="Script" id=1]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26.987, 28.0198 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[node name="BlockArea" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"DestructibleSpriteBlock",
]]

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D" groups=[
"DestructibleSpriteBlock",
]]
position = Vector2( 32, 32 )
shape = SubResource( 1 )

[node name="SolidCollision" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
centered = false
region_enabled = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
